--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.6.1",
+    "@docusaurus/theme-classic": "^3.6.1",
     "@docusaurus/tsconfig": "3.6.1",
     "@docusaurus/types": "3.6.1",
+    "@types/node": "^22.9.0",
     "typescript": "~5.6.2"
   },
   "browserslist": {
